Update AndroidShellModule.java
add root permission to execCommand